--- a/animation-test.html
+++ b/animation-test.html
@@ -3,53 +3,145 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Animation Test</title>
+  <title>Fluid Animation Test</title>
   <style>
-    body {
+    * {
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
       min-height: 100vh;
       position: relative;
       font-family: system-ui, -apple-system, sans-serif;
       color: #0F172A;
+      background: #ffffff;
+      overflow-x: hidden;
+    }
+
+    /* Pseudo-element blobs */
+    body::before,
+    body::after {
+      content: '';
+      position: fixed;
+      border-radius: 50%;
+      filter: blur(80px);
+      opacity: 0.6;
+      z-index: -1;
     }
 
     body::before {
-      content: '';
+      width: 500px;
+      height: 500px;
+      background: radial-gradient(circle, hsl(180, 80%, 70%) 0%, hsl(190, 70%, 80%) 100%);
+      top: -10%;
+      left: -10%;
+      animation: fluidBlob1 15s ease-in-out infinite;
+    }
+
+    body::after {
+      width: 400px;
+      height: 400px;
+      background: radial-gradient(circle, hsl(258, 70%, 75%) 0%, hsl(280, 60%, 85%) 100%);
+      bottom: -10%;
+      right: -10%;
+      animation: fluidBlob2 20s ease-in-out infinite;
+    }
+
+    /* Additional blobs container */
+    .fluid-background-container {
       position: fixed;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
       z-index: -1;
-      animation: fluidBackground 20s ease-in-out infinite;
-      background: linear-gradient(
-        135deg,
-        hsl(180, 70%, 85%) 0%,
-        hsl(190, 80%, 90%) 25%,
-        hsl(0, 0%, 100%) 50%,
-        hsl(180, 60%, 88%) 75%,
-        hsl(190, 75%, 92%) 100%
-      );
-      background-size: 400% 400%;
+      overflow: hidden;
+      pointer-events: none;
     }
 
-    @keyframes fluidBackground {
-      0% {
-        background-position: 0% 50%;
-      }
-      25% {
-        background-position: 50% 75%;
-      }
-      50% {
-        background-position: 100% 50%;
-      }
-      75% {
-        background-position: 50% 25%;
-      }
-      100% {
-        background-position: 0% 50%;
-      }
+    .fluid-blob {
+      position: absolute;
+      border-radius: 50%;
+      filter: blur(60px);
+      opacity: 0.5;
+    }
+
+    .fluid-blob-1 {
+      width: 600px;
+      height: 600px;
+      background: radial-gradient(circle, hsl(180, 90%, 65%) 0%, hsl(190, 80%, 75%) 100%);
+      top: 10%;
+      right: 10%;
+      animation: fluidBlob3 18s ease-in-out infinite;
+    }
+
+    .fluid-blob-2 {
+      width: 450px;
+      height: 450px;
+      background: radial-gradient(circle, hsl(258, 80%, 70%) 0%, hsl(280, 70%, 80%) 100%);
+      bottom: 20%;
+      left: 15%;
+      animation: fluidBlob4 22s ease-in-out infinite;
+    }
+
+    .fluid-blob-3 {
+      width: 350px;
+      height: 350px;
+      background: radial-gradient(circle, hsl(340, 75%, 75%) 0%, hsl(350, 70%, 85%) 100%);
+      top: 50%;
+      left: 50%;
+      animation: fluidBlob5 16s ease-in-out infinite;
+    }
+
+    .fluid-blob-4 {
+      width: 500px;
+      height: 500px;
+      background: radial-gradient(circle, hsl(43, 80%, 75%) 0%, hsl(50, 75%, 85%) 100%);
+      bottom: 10%;
+      right: 20%;
+      animation: fluidBlob6 20s ease-in-out infinite;
+    }
+
+    /* Animations */
+    @keyframes fluidBlob1 {
+      0%, 100% { transform: translate(0, 0) scale(1) rotate(0deg); }
+      25% { transform: translate(30vw, 20vh) scale(1.2) rotate(90deg); }
+      50% { transform: translate(50vw, 40vh) scale(0.8) rotate(180deg); }
+      75% { transform: translate(20vw, 60vh) scale(1.1) rotate(270deg); }
+    }
+
+    @keyframes fluidBlob2 {
+      0%, 100% { transform: translate(0, 0) scale(1) rotate(0deg); }
+      25% { transform: translate(-20vw, -30vh) scale(1.3) rotate(-90deg); }
+      50% { transform: translate(-40vw, -20vh) scale(0.9) rotate(-180deg); }
+      75% { transform: translate(-30vw, -40vh) scale(1.2) rotate(-270deg); }
+    }
+
+    @keyframes fluidBlob3 {
+      0%, 100% { transform: translate(0, 0) scale(1); }
+      33% { transform: translate(-25vw, 15vh) scale(1.3); }
+      66% { transform: translate(-15vw, -20vh) scale(0.9); }
+    }
+
+    @keyframes fluidBlob4 {
+      0%, 100% { transform: translate(0, 0) scale(1); }
+      33% { transform: translate(20vw, -25vh) scale(1.2); }
+      66% { transform: translate(35vw, -10vh) scale(0.85); }
+    }
+
+    @keyframes fluidBlob5 {
+      0%, 100% { transform: translate(-50%, -50%) scale(1) rotate(0deg); }
+      25% { transform: translate(-30%, -70%) scale(1.4) rotate(90deg); }
+      50% { transform: translate(-70%, -30%) scale(0.8) rotate(180deg); }
+      75% { transform: translate(-40%, -60%) scale(1.2) rotate(270deg); }
+    }
+
+    @keyframes fluidBlob6 {
+      0%, 100% { transform: translate(0, 0) scale(1); }
+      33% { transform: translate(-30vw, 20vh) scale(1.1); }
+      66% { transform: translate(-10vw, -15vh) scale(1.3); }
     }
 
     .container {
@@ -60,6 +152,8 @@
       min-height: 100vh;
       padding: 2rem;
       text-align: center;
+      position: relative;
+      z-index: 1;
     }
 
     h1 {
@@ -72,26 +166,48 @@
       font-size: 1.25rem;
       margin-bottom: 2rem;
       max-width: 600px;
+      line-height: 1.6;
     }
 
     .status {
+      background: rgba(255, 255, 255, 0.9);
+      padding: 1.5rem 2.5rem;
+      border-radius: 1rem;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+      backdrop-filter: blur(10px);
+    }
+
+    .blob-info {
+      margin-top: 2rem;
       background: rgba(255, 255, 255, 0.8);
       padding: 1rem 2rem;
       border-radius: 0.5rem;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      font-size: 0.9rem;
     }
   </style>
 </head>
 <body>
+  <div class="fluid-background-container">
+    <div class="fluid-blob fluid-blob-1"></div>
+    <div class="fluid-blob fluid-blob-2"></div>
+    <div class="fluid-blob fluid-blob-3"></div>
+    <div class="fluid-blob fluid-blob-4"></div>
+  </div>
+
   <div class="container">
-    <h1>🎵 Animated Background Test</h1>
+    <h1>🎵 Fluid Animation Test</h1>
     <p>
-      If you can see this text clearly and the background is smoothly transitioning 
-      between cyan and white colors, the animation is working correctly!
+      Watch the colorful blobs move, scale, and rotate across the screen!
+      This creates a dynamic, fluid background effect with 6 animated blobs
+      in different colors (cyan, purple, pink, yellow).
     </p>
     <div class="status">
       <strong>✅ Animation Active</strong><br>
-      Watch the background slowly shift over 20 seconds
+      6 blobs moving at different speeds (15-22 seconds)
+    </div>
+    <div class="blob-info">
+      <strong>Colors:</strong> Cyan • Purple • Pink • Yellow<br>
+      <strong>Effects:</strong> Blur (60-80px) • Scale • Rotate • Translate
     </div>
   </div>
 </body>
